liblol (0.1.5~pre6-1) unstable; urgency=medium

  * fix wrong version mapping for libpthread symbols

 -- Miao Wang <shankerwangmiao@gmail.com>  Mon, 18 Mar 2024 10:43:00 +0800

liblol (0.1.4-1) unstable; urgency=medium

  * Release 0.1.4-1

 -- Miao Wang <shankerwangmiao@gmail.com>  Fri, 01 Mar 2024 23:31:00 +0800

liblol (0.1.4~pre4-1) unstable; urgency=medium

  * glibc: also add syscall fallback for fstatat

 -- Miao Wang <shankerwangmiao@gmail.com>  Tue, 20 Feb 2024 15:22:00 +0800

liblol (0.1.4~pre3-1) unstable; urgency=medium

  * make libc.so.6 executable

 -- Miao Wang <shankerwangmiao@gmail.com>  Thu, 08 Feb 2024 16:09:00 +0800

liblol (0.1.4~pre2-1) unstable; urgency=medium

  * new upstream version

 -- Miao Wang <shankerwangmiao@gmail.com>  Sun, 28 Jan 2024 08:07:00 +0800

liblol (0.1.3-1) unstable; urgency=medium

  * Initial upload

 -- Miao Wang <shankerwangmiao@gmail.com>  Sat, 27 Jan 2024 18:09:00 +0800