@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Miao Wang <shankerwangmiao@gmail.com>
 Build-Depends: debhelper-compat (= 13),
                libstdc++6,
+               libltdl-dev,
                quilt,
                bison,
                gawk,
@@ -19,6 +20,7 @@ Depends: ${misc:Depends},
          libstdc++6,
          libc6 (>= 2.36),
          libc6 (<< ${glibcVer}.1~),
+Breaks: libcrypt1 (>= 1:${libxcryptVer}.1~)
 Conflicts: glibc,
 Recommends: liblol-dkms,
 Description: Compatibility layer for old world applications
