@@ -5,11 +5,14 @@ include /usr/share/dpkg/pkg-info.mk
 
 glibc-ver := 2.38
 patchelf-ver := 0.18.0
+libxcrypt-ver := 4.4.36
 
-SUBSTVARS += -VglibcVer="$(glibc-ver)"
+SUBSTVARS += -VglibcVer="$(glibc-ver)" -VlibxcryptVer="$(libxcrypt-ver)"
 
 glibc-orig = ../liblol_$(DEB_VERSION_UPSTREAM).orig-glibc.tar.xz
 patchelf-orig = ../liblol_$(DEB_VERSION_UPSTREAM).orig-patchelf.tar.gz
+libxcrypt-orig = ../liblol_$(DEB_VERSION_UPSTREAM).orig-libxcrypt.tar.xz
+main-orig = ../liblol_$(DEB_VERSION_UPSTREAM).orig.tar.xz
 
 DEB_BUILD_GNU_TYPE := $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE := $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -48,25 +51,37 @@ rtlddir=/lib64
 slibdir=/lib/$(DEB_HOST_MULTIARCH)
 libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 
-get-orig-source: $(glibc-orig) $(patchelf-orig)
+get-orig-source: $(glibc-orig) $(patchelf-orig) $(libxcrypt-orig) $(main-orig)
 	:
 
 $(glibc-orig):
 	curl -sSfL -o $@ https://ftp.debian.org/debian/pool/main/g/glibc/glibc_$(glibc-ver).orig.tar.xz
 $(patchelf-orig):
 	curl -sSfL -o $@ https://ftp.debian.org/debian/pool/main/p/patchelf/patchelf_$(patchelf-ver).orig.tar.gz
-
+$(libxcrypt-orig):
+	curl -sSfL -o $@ https://ftp.debian.org/debian/pool/main/libx/libxcrypt/libxcrypt_$(libxcrypt-ver).orig.tar.xz
+$(main-orig):
+	tar -cJf $@ -T /dev/null
 %:
 	dh $@ --without autoreconf
 
-override_dh_auto_configure: patch-src config-glibc config-patchelf
-override_dh_auto_build: build-glibc build-patchelf
-override_dh_auto_install: install-glibc symlink-hostlibs
+config-libxcrypt config-libxcrypt-normal: autoreconf
+	mkdir -p debian/build-dir/$(subst config-,,$@)
+	cd debian/build-dir/$(subst config-,,$@) && \
+	$(CURDIR)/libxcrypt/configure \
+	  --build=$(DEB_BUILD_GNU_TYPE) \
+	  --host=$(lol_target_gnu_type) \
+	  --prefix=/usr \
+	  --disable-werror \
+	  --disable-xcrypt-compat-files \
+	  --enable-obsolete-api=glibc \
+	  --libdir=/usr/lib/$(DEB_HOST_MULTIARCH) \
+	  CFLAGS='$(host_cflags)' \
+	  LDFLAGS='$(host_ldflags)'
 
 patchelf_build_dir := debian/build-dir/patchelf
 
-config-patchelf: patch-src.patchelf
-	dh_autoreconf -Dpatchelf
+config-patchelf: patch-src.patchelf autoreconf
 	mkdir -p $(patchelf_build_dir)
 	cd $(patchelf_build_dir) && \
 	$(CURDIR)/patchelf/configure \
@@ -75,6 +90,9 @@ config-patchelf: patch-src.patchelf
 	  CFLAGS='$(build_cflags)' \
 	  CXXFLAGS='$(build_cxxflags)' \
 	  LDFLAGS='$(build_ldflags)'
+
+autoreconf: patch-src
+	dh_autoreconf autoreconf -- -f -i patchelf/ libxcrypt/
 
 glibc_build_dir := debian/build-dir/glibc
 config-glibc: patch-src.glibc
@@ -115,7 +133,6 @@ config-glibc: patch-src.glibc
 		--build=$(DEB_BUILD_GNU_TYPE) \
 		--prefix=/usr \
 		--without-selinux \
-		--enable-crypt \
 		--enable-bind-now \
 		--enable-fortify-source \
 		--enable-stackguard-randomization \
@@ -127,99 +144,158 @@ config-glibc: patch-src.glibc
 		--enable-multi-arch \
 		--enable-obsolete-rpc
 
-glibc_libs = libc.so.6 \
-	     nptl/libpthread.so.0 \
-	     elf/ld.so.1 \
-	     math/libm.so.6 \
-	     resolv/libresolv.so.2 \
-	     malloc/libc_malloc_debug.so.0 \
-	     nptl_db/libthread_db.so.1 \
-	     dlfcn/libdl.so.2 \
-	     locale/libBrokenLocale.so.1 \
-	     rt/librt.so.1 \
-	     crypt/libcrypt.so.1 \
-	     resolv/libanl.so.1 \
-	     login/libutil.so.1 \
-	     nis/libnsl.so.1
+glibc_real_libs = \
+		libc.so.6 \
+		nptl/libpthread.so.0 \
+		elf/ld.so.1 \
+		math/libm.so.6 \
+		resolv/libresolv.so.2 \
+		malloc/libc_malloc_debug.so.0 \
+		nptl_db/libthread_db.so.1 \
+		locale/libBrokenLocale.so.1
+glibc_no_promote_libs = \
+		resolv/libanl.so.1 \
+        dlfcn/libdl.so.2 \
+        rt/librt.so.1 \
+        login/libutil.so.1 \
+        nis/libnsl.so.1
+glibc_merged_libs = \
+	$(filter-out, nis/libnsl.so.1, $(glibc_no_promote_libs)) \
+	nptl/libpthread.so.0
 
-glibc_libs_targets = $(addprefix build-glibc-,$(subst /,-,$(glibc_libs)))
-glibc_libs_targets_after = $(addprefix build-glibc-,$(filter-out libc.so.6,$(subst /,-,$(glibc_libs))))
+glibc_libs = $(glibc_real_libs) $(glibc_no_promote_libs)
+
+glibc_libs_targets = $(addprefix $(glibc_build_dir)/,$(glibc_libs))
+glibc_libs_targets_after = $(addprefix $(glibc_build_dir)/,$(filter-out libc.so.6 elf/ld.so.1,$(glibc_libs)))
 
 glibc_libs_install_targets = $(addprefix install-glibc-,$(subst /,-,$(glibc_libs)))
 
 patchelf_bin := $(patchelf_build_dir)/src/patchelf
 
-$(patchelf_bin): build-patchelf
-	:
+build-patchelf: $(patchelf_bin)
 
 build-glibc: $(glibc_libs_targets)
 	:
 
-$(glibc_libs_targets_after): build-glibc-libc.so.6
+$(glibc_libs_targets_after): $(glibc_build_dir)/libc.so.6 $(glibc_build_dir)/linkobj/libc.so $(glibc_build_dir)/elf/ld.so.1 $(glibc_build_dir)/stamp_elfpatched
+$(glibc_libs_targets): $(glibc_build_dir)/config.status
+$(addprefix $(glibc_build_dir)/,$(glibc_real_libs)): $(patchelf_bin)
 
-build-glibc-libc.so.6:
-	$(MAKE) -C $(glibc_build_dir) "$(CURDIR)/$(glibc_build_dir)/libc.so.6" $(NJOBS)
+define patchelf_pthread
+$(patchelf_bin) \
+	--page-size "$$(( 16 * 1024 ))" \
+	--remap-symvers "GLIBC_2.27=GLIBC_2.0,GLIBC_2.2,GLIBC_2.2.1,GLIBC_2.2.2,GLIBC_2.2.3,GLIBC_2.2.4,GLIBC_2.2.6,GLIBC_2.3,GLIBC_2.3.2,GLIBC_2.3.3,GLIBC_2.3.4,GLIBC_2.4,GLIBC_2.5,GLIBC_2.6,GLIBC_2.7,GLIBC_2.8,GLIBC_2.9,GLIBC_2.10,GLIBC_2.11,GLIBC_2.12,GLIBC_2.13,GLIBC_2.14,GLIBC_2.15,GLIBC_2.16,GLIBC_2.17,GLIBC_2.18,GLIBC_2.19,GLIBC_2.20,GLIBC_2.21,GLIBC_2.22,GLIBC_2.23,GLIBC_2.24,GLIBC_2.25,GLIBC_2.26" \
+	--also-remap-verneed
+endef
 
-glibc_cur_lib = $(subst -,/,$(*))
+define patchelf_normal
+$(patchelf_bin) \
+	--page-size "$$(( 16 * 1024 ))" \
+	--remap-symvers "GLIBC_2.36=GLIBC_2.27,GLIBC_2.28" \
+	--also-remap-verneed
+endef
+
+$(glibc_build_dir)/linkobj/libc.so $(glibc_build_dir)/elf/ld.so.1 $(glibc_build_dir)/libc.so.6: $(glibc_build_dir)/stamp_subdir_lib
+$(glibc_build_dir)/linkobj/libc.so: $(glibc_build_dir)/libc.so.6
+$(glibc_build_dir)/libc.so.6 $(glibc_build_dir)/linkobj/libc.so:
+	$(MAKE) -C $(glibc_build_dir) "$(CURDIR)/$@" $(NJOBS)
+$(glibc_build_dir)/stamp_subdir_lib:
+	$(MAKE) -C $(glibc_build_dir) subdir_lib $(NJOBS)
+	touch $@
+
+$(glibc_build_dir)/stamp_elfpatched: $(glibc_build_dir)/libc.so.6 $(glibc_build_dir)/linkobj/libc.so $(glibc_build_dir)/elf/ld.so.1 $(patchelf_bin)
+	$(patchelf_pthread) $(glibc_build_dir)/libc.so.6
+	$(patchelf_normal) $(glibc_build_dir)/libc.so.6
+	$(patchelf_pthread) $(glibc_build_dir)/linkobj/libc.so
+	$(patchelf_normal) $(glibc_build_dir)/linkobj/libc.so
+	touch $@
+
+glibc_cur_lib = $(*)
 glibc_cur_lib_dir = $(subst /,,$(dir $(glibc_cur_lib)))
 glibc_cur_lib_name = $(notdir $(glibc_cur_lib))
-build-glibc-%:
+
+$(glibc_build_dir)/%:
 	$(MAKE) -C $(CURDIR)/glibc/$(glibc_cur_lib_dir) \
 		"$(CURDIR)/$(glibc_build_dir)/$(glibc_cur_lib)" \
 		subdir=$(glibc_cur_lib_dir) \
 		..=../ \
 		objdir="$(CURDIR)/$(glibc_build_dir)" \
 		$(NJOBS)
+	if [ "x$(filter-out libc.so.6 nptl/libpthread.so.0,$(glibc_cur_lib))" = "x" ]; then \
+		$(patchelf_pthread) $@; \
+	fi
+	if [ "x$(filter-out $(glibc_real_libs),$(glibc_cur_lib))" = "x" ]; then \
+		$(patchelf_normal) $@; \
+	fi
+	[ -f $@ ]
+
+build-libxcrypt build-libxcrypt-normal: build-%: debian/build-dir/%/.libs/libcrypt.so.1
+	:
+libxcrypt_libs_targets := debian/build-dir/libxcrypt/.libs/libcrypt.so.1
+debian/build-dir/libxcrypt/.libs/libcrypt.so.1 debian/build-dir/libxcrypt-normal/.libs/libcrypt.so.1: debian/build-dir/%/.libs/libcrypt.so.1: debian/build-dir/%/config.status $(patchelf_bin)
+	cd $(subst .libs/libcrypt.so.1,,$@) && \
+	rm -f crypt-symbol-vers.h crypt-symbol-vers.h.stamp && \
+	$(MAKE) $(NJOBS) \
+		"libcrypt.la" \
+		$(if $(findstring normal, $@), , "SYMVER_FLOOR=GLIBC_2.27")
+	$(if $(findstring normal, $@), , \
+	$(patchelf_normal) $@; \
+	$(patchelf_bin) \
+		--page-size "$$(( 16 * 1024 ))" \
+		--replace-needed "ld-linux-loongarch-lp64d.so.1" "ld.so.1" \
+		$@; \
+	)
+	[ -f $@ ]
+
+dummy_ld_so := debian/build-dir/ld-linux-loongarch-lp64d.so.1
+$(dummy_ld_so): $(glibc_build_dir)/elf/ld.so.1
+	$(CC) -shared \
+		$(host_cflags) \
+		$(host_ldflags) \
+		-x c /dev/null \
+		-o $@ \
+		-Wl,--version-script -Wl,$(glibc_build_dir)/ld.map \
+		-nostdlib
 
 TMPDIR ?= debian/tmp
 install_libs_dir := $(TMPDIR)/usr/lib/$(lol_target_gnu_type)
 install_preload_libs_dir := $(install_libs_dir)/preload
 $(install_preload_libs_dir) $(install_libs_dir):
 	mkdir -p $@
-install-glibc-%: $(patchelf_bin) $(install_preload_libs_dir)
-	if [ "$(glibc_cur_lib)" = "nptl/libpthread.so.0" ] || [ "$(glibc_cur_lib)" = "libc.so.6" ]; then \
-		$(patchelf_bin) \
-			--page-size "$$(( 16 * 1024 ))" \
-			--remap-symvers "GLIBC_2.27=GLIBC_2.0,GLIBC_2.2,GLIBC_2.2.1,GLIBC_2.2.2,GLIBC_2.2.3,GLIBC_2.2.4,GLIBC_2.2.6,GLIBC_2.3,GLIBC_2.3.2,GLIBC_2.3.3,GLIBC_2.3.4,GLIBC_2.4,GLIBC_2.5,GLIBC_2.6,GLIBC_2.7,GLIBC_2.8,GLIBC_2.9,GLIBC_2.10,GLIBC_2.11,GLIBC_2.12,GLIBC_2.13,GLIBC_2.14,GLIBC_2.15,GLIBC_2.16,GLIBC_2.17,GLIBC_2.18,GLIBC_2.19,GLIBC_2.20,GLIBC_2.21,GLIBC_2.22,GLIBC_2.23,GLIBC_2.24,GLIBC_2.25,GLIBC_2.26" \
-			--also-remap-verneed \
-			$(glibc_build_dir)/$(glibc_cur_lib) \
-			--output $(install_preload_libs_dir)/$(glibc_cur_lib_name); \
-	else \
-		install -Dvm644 $(glibc_build_dir)/$(glibc_cur_lib) \
-			-t $(install_preload_libs_dir)/; \
-	fi
-	$(patchelf_bin) \
-		--page-size "$$(( 16 * 1024 ))" \
-		--remap-symvers "GLIBC_2.36=GLIBC_2.27,GLIBC_2.28" \
-		--also-remap-verneed \
-		$(install_preload_libs_dir)/$(glibc_cur_lib_name)
 
-install-glibc-dummy-ldso:
-	$(CC) -shared \
-		$(host_cflags) \
-		$(host_ldflags) \
-		-x c /dev/null \
-		-o $(install_preload_libs_dir)/ld-linux-loongarch-lp64d.so.1 \
-		-Wl,--version-script -Wl,$(glibc_build_dir)/ld.map \
-		-nostdlib
+all-libs := $(libxcrypt_libs_targets) $(glibc_libs_targets) $(dummy_ld_so)
 
-install-glibc: $(glibc_libs_install_targets) $(install_preload_libs_dir) install-glibc-dummy-ldso
-	chmod 0644 $(install_preload_libs_dir)/*
-	chmod +x $(install_preload_libs_dir)/ld.so.1
-	chmod +x $(install_preload_libs_dir)/libc.so.6
-	mkdir -pv $(TMPDIR)/lib64
-	ln -sfvr $(install_preload_libs_dir)/ld.so.1 $(TMPDIR)/lib64/ld.so.1
+install-libs: $(addprefix $(install_preload_libs_dir)/, $(notdir $(all-libs))) $(TMPDIR)/lib64/ld.so.1
+	:
+$(TMPDIR)/lib64/ld.so.1: $(install_preload_libs_dir)/ld.so.1
+	mkdir -p $(dir $@)
+	ln -sfvr $< $@
+
+define install-lib-rule
+$(addprefix $(install_preload_libs_dir)/,$(notdir $(1))): $(1)
+	install -Dvm644 $$< $$@
+ifeq ($(filter-out libc.so.6 ld.so.1,$(notdir $(1))),)
+	chmod +x $$@
+endif
+endef
+
+$(foreach lib-target, $(all-libs), $(eval $(call install-lib-rule,$(lib-target))))
 
 symlink-hostlibs: $(install_libs_dir) $(install_preload_libs_dir)
 	ln -sfv $(libdir)/libstdc++.so.6 $(install_preload_libs_dir)/
 
-build-patchelf:
+$(patchelf_bin):
 	$(MAKE) -C $(patchelf_build_dir) all $(NJOBS)
+	[ -f $@ ]
 
 patch-src: patch-src.patchelf patch-src.glibc
 
 patch-src.%:
 	cd $* && QUILT_PATCHES=../debian/patches/$* quilt push -a
+
+override_dh_auto_configure: patch-src config-glibc config-patchelf config-libxcrypt
+override_dh_auto_build: $(all-libs)
+override_dh_auto_install: install-libs symlink-hostlibs
 
 override_dh_clean: clean-patch clean-patchelf
 	dh_clean
@@ -249,4 +325,7 @@ clean-patch.%:
 override_dh_dwz:
 	:
 
-.PHONY: get-orig-source patch-src clean-patch config-glibc config-patchelf
+.PHONY: get-orig-source patch-src clean-patch \
+	config-glibc config-patchelf config-libxcrypt config-libxcrypt-normal \
+	build-glibc build-patchelf \
+	install-glibc symlink-hostlibs
