@@ -1,5 +1,7 @@
 liblol (0.1.5~pre6-1) unstable; urgency=medium
 
+  * not promoting symbol versions of libnsl.so
+  * use libxcrypt for libcrypto.so.1
   * fix wrong version mapping for libpthread symbols
 
  -- Miao Wang <shankerwangmiao@gmail.com>  Mon, 18 Mar 2024 10:43:00 +0800
